# rundisort

./: .gitignore  README.md  pyproject.toml
installation/: .gitignore  Makefile  README_disort_PMR.txt  disort_driver_py.f  disort_driver_py_new.f  make_log_20201012.txt  make_log_2021_04_02.txt  make_log_old.txt  my_output.txt
installation/extras/: disort_driver_py_planned.f  disort_py_new.f
installation_disort2.1/: README_disort_PMR.txt  disort_py_backup.f  make_log_20210401.rtf  make_log_20210402.rtf
installation_disort4.0.99/: disort_py.f  mydisortdrivertest.f90  run_disort_driver.sh
installation_disort4.0.99/extra/: disort_driver copy.f  disort_program.f90  disort_py copy.f  run_disort_driver copy.sh
installation_python2/: .gitignore  disort_py.f
rundisort/: Makefile  README.rtf  README_disort_PMR.txt  code.f  disort4_driver.f  disort_driver_py.f  disort_driver_py_backup.f  disort_py.f  disort_py_test.f  disort_vars.mod  getmompf.f  logfile.txt  make_disort_driver_log.rtf  make_log.txt  make_log_20201012b.txt  my_output.txt  mydisotest.f90  newlog.txt  run_mydisotest.sh  test_run_disort_unit_tests.rtf
rundisort/extra/: disort_driver_py_goal.f  disort_subroutine_plan.f90  test_run_disort_unit_tests_old_gfortran.rtf
sampleRun/: disort_out_sample_run.txt  sample_run copy.py  sample_run.py
sampleRun_python2/: disort_out_sample_run.txt  sample_run.py
sample_run_namelist/: sample.nml
tests/f2py_test/: .gitignore  Makefile  test.f  test2.f  test_f2py.py  test_f2py2.py
tests/fortran_test/: .gitignore  fortran_test.f
tests/samplerun/: disortinput.nml
(+10 files in other folders)
