[tool.poetry]
name = "rundisort"
version = "0.1.0"
description = "Rundisort is a codebase for allowing DISORT to be run from Python using f2py."
authors = ["Penny Rowe <1795738+prowe12@users.noreply.github.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
